--- a/CarpetaHenry/Modulo 3-HTML/index.html
+++ b/CarpetaHenry/Modulo 3-HTML/index.html
@@ -9,6 +9,8 @@
          <span>Home</span>
          <span>Noticias</span>
          <span>Registrarse</span>
+         <br>
+         <img src="./images (1).jpeg">
         </header>
 
         <main>
@@ -37,9 +39,9 @@
                     <h2>Tercera seccion de mi pagina</h2>
                         <h3>Lista desordenada</h3>
                         <ul>
-                            <li>Elemento 1</li>
-                            <li>Elemento 2</li>
-                            <li>Elemento 3</li>
+                           <li>Elemento1</li>
+                           <li>Elemento2</li>
+                           <li>Elemento3</li>
                         </ul>
              </article>
              
@@ -49,9 +51,7 @@
         </main>
 
         <footer>
-            <span>Enlace 1 </span>
-            <span>Enlace 2 </span>
-            <span>Enlace 3 </span>
+            <a href="./contacto.html">Contacto</a>
         </footer>
         
     </body>
